# opencv-mre

./: .envrc  .gitignore  CMakeLists.txt  CMakePresets copy.json  CMakePresets.json  export-prj.sh  main.cpp  main.cu  readme.md  vcpkg copy.json  vcpkg.json
fixtures/: 600speckle.tif
